# PunkComp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PunkComp.jucer  README.md
.github/.workflows/: cmake_workflow.yml
.github/workflows/: main.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Component/: GainReductionMeter.h
benchmarks/: Benchmarks.cpp
source/: GainReductionMeter.h
tests/: PluginBasics.cpp
